--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -279,6 +279,9 @@ nav[aria-label='site'] {
           padding: 0.3rem 0 !important; } }
     nav[aria-label='site'] ul.active {
       display: block !important; }
+      @media (min-width: 768px) {
+        nav[aria-label='site'] ul.active {
+          display: flex !important; } }
     nav[aria-label='site'] ul li {
       margin: 0 0.25rem; }
       nav[aria-label='site'] ul li a {
